# llm-router

./: .env.example  .gitignore  README.md  pyproject.toml
_tests/: conftest.py
_tests/martian/: test_client_martian.py  test_main.py
_tests/martian/anthropic/: test_anthropic.py
_tests/martian/openai/: test_openai.py
martian/: anthropic.py  client_martian.py  enums.py  exceptions.py  llm_service.py  main.py  openai.py  router_llm.py  settings.py
martian/maps/: anthropic_to_martian.py  openai_to_martian.py
martian/models/: martian.py  request.py
tests/martian/: test_main.py
tests/martian/maps/: test_martian.py
